<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ICON"
            android:textColor="#ffffff" />

    </LinearLayout>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:ems="10"
        android:hint="Email *"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:ems="10"
        android:hint="Password *"
        android:textColorHint="#ffffff"
        android:inputType="textPassword" />



        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:ems="10"
            android:hint="Name *"
            android:inputType="textPersonName"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:ems="10"
            android:hint="Mobile Phone Number *"
            android:textColorHint="#ffffff"
            android:inputType="phone" />

    <EditText
        android:id="@+id/vehiclePlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:ems="10"
        android:hint="Vehicle Plate *"
        android:textColorHint="#ffffff"
        android:inputType="text" />

        <Spinner
        android:id="@+id/vehicleType"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:prompt="@string/type_prompt"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/vehicleMake"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:prompt="@string/make_prompt"
        android:spinnerMode="dialog" />


        <EditText
            android:id="@+id/other"
            android:layout_width="165dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15dp"
            android:ems="10"
            android:hint="Other:"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/vehicleEngineType"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:prompt="@string/engine_prompt"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="* Required fields"
        android:textColorHint="#010b13" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:background="@drawable/shape_button"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="#010b13" />

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login here"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#010b13" />

    </LinearLayout>

    </LinearLayout>

</ScrollView>